--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -52,6 +52,8 @@ android {
 }
 
 dependencies {
+    implementation project(':spotify-app-remote')
+    implementation "com.google.code.gson:gson:2.8.9"
     implementation "androidx.fragment:fragment-ktx:1.6.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
